--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,6 @@ jobs:
           application_name: docker-project
           environment_name: Docker-project-env
           existing_bucket_name: elasticbeanstalk-eu-west-1-463856615333
-          region: us-east-1
+          region: eu-west-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
