--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-project
-          environment_name: Docker-project-env
+          application_name: react-project
+          environment_name: React-project-env
           existing_bucket_name: elasticbeanstalk-eu-west-1-463856615333
           region: eu-west-1
           version_label: ${{ github.sha }}
